syntax = "proto3";

package com.dipsscor.interfaces;

option java_multiple_files = true;
option java_package = "com.dipsscor.interfaces";


message EmployeeRequest{
	string firstName = 1;
	string lastName = 2;
}

message EmployeeResponse{
	string fullname = 1;
}

service EmployeeService{
	rpc employeeFullName(EmployeeRequest) returns (EmployeeResponse);
}